--- a/RefreshOnTimer/RefreshOnTimer.csproj
+++ b/RefreshOnTimer/RefreshOnTimer.csproj
@@ -61,7 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DataItem.cs" />
+    <Compile Include="MarketData.cs" />
     <Compile Include="RefreshOnTimerCollection.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="MainWindow.xaml">
