--- a/CS/RefreshOnTimer/RefreshOnTimer.csproj
+++ b/CS/RefreshOnTimer/RefreshOnTimer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="DevExpress.Xpf.Core.v21.2" />
     <Reference Include="DevExpress.Xpf.Grid.v21.2" />
     <Reference Include="DevExpress.Xpf.Grid.v21.2.Core" />
+	<Reference Include="DevExpress.Printing.v21.2.Core" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
